[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/EnemyHeavy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/smasher_body.png" type="Texture" id=2]
[ext_resource path="res://Enemies/smasher_legr.png" type="Texture" id=3]
[ext_resource path="res://Enemies/smasher_legl.png" type="Texture" id=4]
[ext_resource path="res://Audio/enemy_heavy_step.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.5619, 81.8188 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 81.1025, 42.6586 )

[node name="EnemyHeavy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
max_speed = 150

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -89 )

[node name="SpriteLegL" type="Sprite" parent="Position2D"]
texture = ExtResource( 4 )

[node name="SpriteLegR" type="Sprite" parent="Position2D"]
texture = ExtResource( 3 )

[node name="SpriteBody" type="Sprite" parent="Position2D"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.59462, -81.4607 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"smasher",
]]
visible = false
collision_layer = 8

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1.78381, -43.3224 )
shape = SubResource( 2 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -75.9519, -1.006 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 25 )
collision_mask = 4
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 78.3657, -0.935275 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 25 )
collision_mask = 4
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "SoundEffects"

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 0.2
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 3.86493, -100.785 )
scale = Vector2( 10.9596, 9.9488 )
[connection signal="timeout" from="AudioStreamPlayer/Timer" to="." method="_on_Timer_timeout"]
